syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message LinkModelationToSalesArrangementRequest {
	// Id SA na ktery se ma nova modelace nalinkovat
	int32 SalesArrangementId = 1;

	// Id nove modelace
	int32 OfferId = 2;
}