syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";

message UpdateOfferDocumentIdRequest {
	int32 SalesArrangementId = 1;

	google.protobuf.StringValue OfferDocumentId = 2;
}